<resources>
    <string name="app_name">DieChiChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DieChiChat</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email/Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Bienvenido!"</string>
    <string name="invalid_username">Usuario no válido</string>
    <string name="invalid_password">La contraseña debe tener un mínimo de 5 carácteres</string>
    <string name="login_failed">"Login failed"</string>
    <string name="by">Created By María - Marta</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_miperfil">Mi perfil</string>
    <string name="menu_misclientes">Mis clientes</string>
    <string name="menu_nuevocli">Nuevo cliente</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_login">Login</string>

    <!-- mensajes-->
    <string name="msg_DlgConfirmacion_Salir">¿Desea cerrar la App?</string>
    <string name="msg_DlgConfirmacion_Eliminar">Se va a eliminar el elemento seleccionado.\n¿Está seguro?</string>
    <string name="msg_LoginOK">Login correcto.</string>
    <string name="msg_LoginKO">Login incorrecto.</string>
    <string name="msg_NoLogin">No Login!!</string>
    <string name="msg_LoginPermisos">No tiene permisos</string>
    <string name="msg_datosObligatorios">Todos los datos son obligatorios</string>
    <string name="msg_peso">El peso debe ser mayor que 0</string>
    <string name="msg_altura">La altura debe ser mayor que 0</string>
    <string name="msg_bienvenida">Bienvenido</string>

    <!-- NUEVO CLIENTE -->
    <string name="msg_altaCorrecta">Alta correcta</string>
    <string name="msg_altaIncorrecta">Alta incorrecta</string>
    <string name="msg_editarOk">Edición correcta</string>
    <string name="msg_editarKo">Edición Incorrecta</string>
    <string name="btAceptarEdicionKO">Por favor, habilita la edición</string>
    <string name="msg_clieteEliminado">Cliente eliminado correctamente</string>
    <string name="msg_clieteNoEliminado">El cliente no se ha podido eliminar</string>

    <!-- COLORES -->
    <string name="colorFondo">#4A148C</string>
    <string name="colorLetras">#ffbf00</string>

    <!-- botones -->
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="iv_DieChiChat_contentDescription">Imagen DieChiChat</string>

    <!-- datos -->
    <string name="datos_nombre">Nombre: </string>
    <string name="datos_apellidos">Apellidos: </string>
    <string name="datos_usuario">Usuario: </string>
    <string name="datos_contraseña">Contraseña: </string>

    <string name="datos_fechanac">Fecha Nac.:</string>

    <string name="datos_altura">Altura (cm): </string>
    <string name="datos_peso">Peso (Kg) : </string>
    <string name="bt_fecnac">…</string>
    <string name="title_activity_mi_perfil">Mi perfil</string>

    <!-- mi perfil -->
    <string name="perfil_nombre">Nombre: </string>
    <string name="perfil_apellidos">Apellidos: </string>
    <string name="perfil_usuario">Usuario: </string>
    <string name="perfil_contraseña">Contraseña: </string>
    <string name="menu_editar_perfil">Editar perfil</string>
    <string name="title_activity_mis_clientes">Mis Clientes</string>
    <!-- FIREBASE -->
    <string name="Firebase_name_key">Firebase_name</string>
    <string name="Firebase_name_title">Firebase Nombre</string>
    <string name="Firebase_name_summary">Nombre raíz en Firebase</string>
    <string name="Firebase_name_default">DieChiChat</string>

    <string name="title_activity_nuevo_cliente">Nuevo Cliente</string>
    <string name="iv_cli_contentDescription">Foto Cliente</string>
    <string name="btEditar">Editar</string>
    <string name="btAsignarDieta">Modificar Dieta</string>
    <string name="btEliminar">Eliminar</string>
    <string name="string_ojo">👁</string>
    <string name="tvFoto">Foto: </string>

    <string name="tvAlimento">Alimento</string>
    <string name="title_activity_dieta">Dieta</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Dieta</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="tvDesayuno">Desayuno</string>
    <string name="tvComida">Comida</string>
    <string name="tvCena">Cena</string>
    <string name="tvOtros">Otros</string>
    <string name="btMas">➕</string>
    <string name="menu_chat">Chat</string>
    <string name="menuVacio"> </string>
    <string name="btEnviar">⬆️</string>
    <string name="title_activity_chat">Chat</string>
    <string name="etEscribeTexto">Escribe un mensaje</string>

    <string name="tvFotoAsignar">Asignar foto de perfil</string>
    <string name="tvFotoPerfil">Foto de perfil</string>
    <string name="tvFotoCambiar">Cambiar foto de perfil</string>
    <string name="etAlimento">Inserta el nombre del alimento</string>
    <string name="btBuscarAlimento">Buscar</string>
    <string name="title_activity_alimentos">Alimentos</string>
    <string name="msg_mantenimiento">Sección en mantenimiento para vías futuras, intentelo más tarde.</string>
    <string name="no_results">No hay resultados</string>
    <string name="btEnviarChat">Enviar</string>
    <string name="no_search_term">Por favor, introduce un alimento</string>
    <string name="no_network">Por favor, conecta el dispositivo a internet y vuelve a intentarlo.</string>

    <string name="menu_terminar">Finalizar</string>
    <string name="cargando">Cargando…</string>
    <string name="ok">OK</string>
    <string name="salir">Salir</string>
    <string name="msg_bienvenida2">¡ Es la hora del cambio !</string>
    <string name="splashApp_key">splashApp_key</string>
    <string name="category_Interfaz">Interfaz</string>
    <string name="splashApp_title">Duración Splash (3sg)</string>

    <string name="tvNombreAlimento">Nombre:</string>
    <string name="tvCantidad">Cantidad:</string>
    <string name="tvKcal">Kcal:</string>
    <string name="tvProteinas">Proteínas:</string>
    <string name="tvGrasa">Grasa:</string>
    <string name="tvCarbohidratos">Carbohidratos:</string>
    <string name="tvFibra">Fibra:</string>

    <string name="hello_blank_fragmentContacto">Contacto</string>
    <string name="title_activity_fragmentAlimentoSeleccionado">Propiedades Alimento</string>
    <string name="msg_alimentoGuardado">Alimento guardado</string>
    <string name="msg_alimentoNoGuardado">Alimento no guardado</string>
    <string name="msg_alimentoNoValido">Selecciona un alimento válido</string>
    <string name="msg_datos_incompletos">Introduce usuario y contraseña</string>
    <string name="btOk">Ok</string>
    <string name="titleInformacion">¡Atención!</string>
    <string name="msgInformacion">Para ver los datos modificados tendrá que iniciar sesión de nuevo.</string>
    <string name="msg_cantidadMal">Introduzca bien la cantidad</string>

    <string-array name="array_tipos">
        <item></item>
        <item>l</item>
        <item>ml</item>
        <item>kg</item>
        <item>mg</item>
        <item>g</item>
        <item>Cucharada</item>
        <item>Pieza</item>
        <item>onza</item>
    </string-array>
</resources>
