<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.diechichat.vista.fragmentos.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home">
        <action

            android:id="@+id/action_nav_inicio_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_nav_inicio_to_fragment_dieta"
            app:destination="@id/fragment_dieta" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.diechichat.vista.fragmentos.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login"/>

    <dialog
        android:id="@+id/dlgConfirmacionMain"
        android:name="com.example.diechichat.vista.dialogos.DlgConfirmacion"
        android:label="DlgConfirmacion" />
    <action
        android:id="@+id/action_global_dlgConfirmacionMain"
        app:destination="@id/dlgConfirmacionMain" />

    <fragment
        android:id="@+id/fragment_dieta"
        android:name="com.example.diechichat.vista.fragmentos.DietaFragment"
        android:label="@string/title_activity_dieta"
        tools:layout="@layout/fragment_dieta"/>

</navigation>
