<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.fragmentos.MisClientesFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvClientes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btAsignarDieta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btEditar"
        style="@style/Theme.DieChiChat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btEditar"
        app:layout_constraintBottom_toBottomOf="@+id/btAsignarDieta"
        app:layout_constraintEnd_toStartOf="@+id/btAsignarDieta"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btAsignarDieta"
        style="@style/Theme.DieChiChat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:shadowColor="@color/gold"
        android:outlineAmbientShadowColor="@color/darkBlue"
        android:outlineSpotShadowColor="@color/cardview_shadow_end_color"
        android:text="@string/btAsignarDieta"
        app:layout_constraintBottom_toBottomOf="@+id/btEliminar"
        app:layout_constraintEnd_toStartOf="@+id/btEliminar"
        app:layout_constraintStart_toEndOf="@+id/btEditar"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btEliminar"
        style="@style/Theme.DieChiChat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btEliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btAsignarDieta" />


</androidx.constraintlayout.widget.ConstraintLayout>